<resources>
    <string name="app_name">Tutor Center</string>
    <string name="signupPage">Signup</string>

    <string name="title_activity_news_feed">TuitionFeed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="setting">Settings</string>
    <string name="LogOut_Button">Log Out</string>
    <string name="news">Feed</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="usertype">User Type</string>
    <string name="eduInfo">Education</string>
    <string name="personalInfo">Personal</string>
    <string name="job_feed">Current tuition</string>
    <string name="student_post_btn">POST</string>
    <string name="editBtn">Edit</string>
    <string name="additional_number">Give additional number</string>
    <string name="detail_address">Give detail address</string>
    <string name="nid_no_passport_no">Give Nid no/ passport no</string>
    <string name="facebook_id">Give faceBook ID</string>
    <string name="linked_in_id">Give linked In ID</string>
    <string name="parent_s_information">Parent\'s Information</string>
    <string name="job_post">Post new tuition</string>
    <string name="payment">Payment</string>

    <string-array name="gender_type">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="class_of_student">
        <item>Class/Courses</item>
        <item>Class 1</item>
        <item>class 2</item>
        <item>class 3</item>
        <item>class 4</item>
        <item>class 5</item>
        <item>class 6</item>
        <item>class 7</item>
        <item>class 8</item>
        <item>class 9</item>
        <item>class SSC / O-level</item>
        <item>class HSC / A=level</item>
    </string-array>

    <string-array name="preferred_medium">
        <item>Category</item>
        <item>English Medium</item>
        <item>Bangla Medium</item>
        <item>English Version</item>
        <item>IT</item>
        <item>Test Preparation</item>
        <item>Language Learning</item>
        <item>University Admission Test</item>
        <item>Arts</item>
    </string-array>

    <string-array name="days_in_a_week">
        <item>Num of Days</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>7 Days</item>
    </string-array>

    <string-array name="preferred_teacher_gender">
        <item>Tutor Gender</item>
        <item>Any</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>



</resources>
