<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/edit_personal_info_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#33b5e5"
                android:layout_gravity="right"
                android:text="@string/editBtn"/>

            <EditText
                android:id="@+id/additional_number_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/additional_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/detail_address_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/nid_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nid_no_passport_no"
                android:inputType="text" />

            <EditText
                android:id="@+id/fb_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/facebook_id"
                android:inputType="text" />

            <EditText
                android:id="@+id/linked_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/linked_in_id"
                android:inputType="text" />


        </LinearLayout>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eaeaea"
            android:textColor="#000000"
            android:text="@string/parent_s_information"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/father_name_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give father's name"
                android:inputType="text" />

            <EditText
                android:id="@+id/mother_name_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give mother's name"
                android:inputType="text" />

            <EditText
                android:id="@+id/father_number_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give father's number"
                android:inputType="number" />

            <EditText
                android:id="@+id/mother_number_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give mother's number"
                android:inputType="number" />


        </LinearLayout>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eaeaea"
            android:textColor="#000000"
            android:text="Reference person"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/ref_person_name_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give Ref person name"
                android:inputType="text" />

            <EditText
                android:id="@+id/contact_number_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give contact number"
                android:inputType="number" />

            <EditText
                android:id="@+id/relation_edit_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Give relation with ref person"
                android:inputType="text" />

            <Button
                android:id="@+id/save_personal_info_btn_id"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:background="#00c851"
                android:layout_gravity="right"
                android:text="SAVE"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>